# django-wellknown

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/django_wellknown/: app.py  helpers.py  middleware.py  urls.py  views.py
tests/: conftest.py  settings.py  test_change_password.py  test_gpc.py  test_security_txt.py  urls.py  views.py
