[project]
name = "django-wellknown"
version = "0.1.0"
description = "Django /.well-known Endpoints."
readme = "README.md"
authors = [
    { name = "Alessandro Ferrini", email = "im@alessandroferrini.com" },
]
keywords = [
    "django",
    "well-known",
    "security.txt",
    "change-password",
    "privacy",
]
requires-python = ">=3.8"
dependencies = ["Django>=4.2"]

[project.scripts]
django-wellknown = "django_wellknown:main"

# [project.urls]
# Homepage = "https://github.com/yourname/django-wellknown"
# Repository = "https://github.com/yourname/django-wellknown"
# Issues = "https://github.com/yourname/django-wellknown/issues"

[build-system]
requires = [
    "uv_build>=0.8.15,<0.9.0",
]
build-backend = "uv_build"
