[project]
name = "django-wellknown"
version = "0.1.0"
description = "Django /.well-known Endpoints."
readme = "README.md"
authors = [
    { name = "Alessandro Ferrini", email = "im@alessandroferrini.com" },
]
keywords = [
    "django",
    "well-known",
    "security.txt",
    "change-password",
    "privacy",
]
requires-python = ">=3.8"
dependencies = ["Django>=4.2"]

[project.scripts]
django-wellknown = "django_wellknown:main"

[project.urls]
Homepage = "https://github.com/Alurith/django-wellknown"
Repository = "https://github.com/Alurith/django-wellknown"
Issues = "https://github.com/Alurith/django-wellknown/issues"

[build-system]
requires = [
    "uv_build>=0.8.15,<0.9.0",
]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = "."

python_files = [
    "tests/test_*.py",
    "test_*.py",
]
addopts = "-q"
